Fonts and alignment for current weather section fixed.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,26 +1,69 @@
 main > * {
   width: 100%;
-  /* height: 100%; */
+}
+
+.location {
+  margin-bottom: 10px;
 }
 
 .location-name {
-  font-size: large;
+  font-size: 2.5vw;
   font-weight: bold;
+  margin-bottom: 5px;
 }
+
+.date-time {
+  font-size: 1vw;
+}
+
 .current-weather-wrapper,
 .current-weather {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
+
 .current-temp-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
+
 .weather-img {
   width: 100%;
-}
-.current-temp {
-  font-size: 6rem;
+  font-size: 100%;
   font-weight: bold;
+}
+
+.current-temp {
+  font-size: 10vw;
+}
+
+.current-temp-desc {
+  transform: translate(calc(-52%), -10px);
+  font-size: 1.3vw;
+}
+
+.weather-details {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.weather-details li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.detail-data {
+  font-size: 2vw;
+  margin-bottom: 5px;
+}
+
+.detail-title {
+  font-size: 1vw;
 }
